crates/wac-parser/tests/resolution/fail/duplicate-enum-case.wac
package test:comp;

enum e {
    a,
    b,
    c,
    b,
}